fix index card spacing

--- a/app/assets/stylesheets/components/feature.scss
+++ b/app/assets/stylesheets/components/feature.scss
@@ -42,7 +42,7 @@
   font-size: 34px;
   padding: 0 60px;
   margin-top: 70px;
-  margin-bottom: 45px;
+  margin-bottom: 30px;
 }
 
 .feature-info > h3 {
